--- a/style.css
+++ b/style.css
@@ -69,7 +69,10 @@ h1 {
     display: flex;
     align-items: center;
     padding: 0.75rem;
-    border-bottom: 1px solid #eee;
+    margin-bottom: 5px;
+    background-color: #ebe9e9;
+    border: 1px solid #ddd;
+    border-radius: 5px;
     gap: 0.5rem;
 }
 
